Fix contrast for message text

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,7 @@ $color-disabled: rgb(128 128 128 / 95%);
 // Hint box, e.g. for when no content is set
 $color-hint-message-background: #f5e8d5;
 $color-hint-message-border: #ed5;
-$color-hint-message-text: #9e5c16;
+$color-hint-message-text: #874e12;
 
 $color-content: #cfdff0;
 $color-tab: #e7f0f9;
